set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS NO)

find_package(Qt5 REQUIRED COMPONENTS Core Widgets Concurrent Qml Svg)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

set(TILEDEDITOR_SOURCES
	aboutdialog.cpp
	abstractobjecttool.cpp
	abstracttilefilltool.cpp
	abstracttileselectiontool.cpp
	abstracttiletool.cpp
	abstracttool.cpp
	abstractworldtool.cpp
	actionmanager.cpp
	addpropertydialog.cpp
	addremovelayer.cpp
	addremovemapobject.cpp
	addremovetiles.cpp
	addremovetileset.cpp
	addremovewangset.cpp
	adjusttileindexes.cpp
	automapper.cpp
	automapperwrapper.cpp
	automappingmanager.cpp
	automappingutils.cpp
	brokenlinks.cpp
	brushitem.cpp
	bucketfilltool.cpp
	capturestamphelper.cpp
	changeimagelayerproperty.cpp
	changelayer.cpp
	changemapobject.cpp
	changemapobjectsorder.cpp
	changemapproperty.cpp
	changeobjectgroupproperties.cpp
	changepolygon.cpp
	changeproperties.cpp
	changeselectedarea.cpp
	changetile.cpp
	changetileanimation.cpp
	changetileimagesource.cpp
	changetileobjectgroup.cpp
	changetilewangid.cpp
	changewangcolordata.cpp
	changewangsetdata.cpp
	clickablelabel.cpp
	clipboardmanager.cpp
	colorbutton.cpp
	command.cpp
	commandbutton.cpp
	commanddatamodel.cpp
	commanddialog.cpp
	commandmanager.cpp
	commandsedit.cpp
	consoledock.cpp
	createellipseobjecttool.cpp
	createobjecttool.cpp
	createpointobjecttool.cpp
	createpolygonobjecttool.cpp
	createrectangleobjecttool.cpp
	createscalableobjecttool.cpp
	createtemplatetool.cpp
	createtextobjecttool.cpp
	createtileobjecttool.cpp
	custompropertieshelper.cpp
	debugdrawitem.cpp
	document.cpp
	documentmanager.cpp
	donationpopup.cpp
	editableasset.cpp
	editablegrouplayer.cpp
	editableimagelayer.cpp
	editablelayer.cpp
	editablemanager.cpp
	editablemap.cpp
	editablemapobject.cpp
	editableobject.cpp
	editableobjectgroup.cpp
	editableselectedarea.cpp
	editabletile.cpp
	editabletilelayer.cpp
	editabletileset.cpp
	editablewangset.cpp
	editor.cpp
	editpolygontool.cpp
	eraser.cpp
	erasetiles.cpp
	exportasimagedialog.cpp
	exporthelper.cpp
	filechangedwarning.cpp
	fileedit.cpp
	filteredit.cpp
	flexiblescrollbar.cpp
	flipmapobjects.cpp
	geometry.cpp
	grouplayeritem.cpp
	iconcheckdelegate.cpp
	id.cpp
	imagecolorpickerwidget.cpp
	imagelayeritem.cpp
	issuescounter.cpp
	issuesdock.cpp
	issuesmodel.cpp
	languagemanager.cpp
	layerdock.cpp
	layeritem.cpp
	layermodel.cpp
	layeroffsettool.cpp
	locatorwidget.cpp
	magicwandtool.cpp
	maintoolbar.cpp
	mainwindow.cpp
	mapdocument.cpp
	mapdocumentactionhandler.cpp
	mapeditor.cpp
	mapitem.cpp
	mapobjectitem.cpp
	mapobjectmodel.cpp
	mapscene.cpp
	mapview.cpp
	minimap.cpp
	minimapdock.cpp
	movelayer.cpp
	movemapobjecttogroup.cpp
	newmapdialog.cpp
	newsbutton.cpp
	newsfeed.cpp
	newtilesetdialog.cpp
	newversionbutton.cpp
	newversionchecker.cpp
	newversiondialog.cpp
	noeditorwidget.cpp
	objectgroupitem.cpp
	objectrefdialog.cpp
	objectrefedit.cpp
	objectreferenceitem.cpp
	objectreferenceshelper.cpp
	objectreferencetool.cpp
	objectsdock.cpp
	objectselectionitem.cpp
	objectselectiontool.cpp
	objectsview.cpp
	offsetlayer.cpp
	offsetmapdialog.cpp
	painttilelayer.cpp
	pluginlistmodel.cpp
	pointhandle.cpp
	popupwidget.cpp
	preferences.cpp
	preferencesdialog.cpp
	project.cpp
	projectdock.cpp
	projectmanager.cpp
	projectmodel.cpp
	projectpropertiesdialog.cpp
	propertiesdock.cpp
	propertybrowser.cpp
	propertytypeseditor.cpp
	propertytypesmodel.cpp
	raiselowerhelper.cpp
	regionvaluetype.cpp
	relocatetiles.cpp
	reparentlayers.cpp
	replacetemplate.cpp
	replacetileset.cpp
	resizedialog.cpp
	resizehelper.cpp
	resizemap.cpp
	resizetilelayer.cpp
	reversingproxymodel.cpp
	scriptdialog.cpp
	scriptedaction.cpp
	scriptedfileformat.cpp
	scriptedtool.cpp
	scriptfile.cpp
	scriptfileformatwrappers.cpp
	scriptfileinfo.cpp
	scriptimage.cpp
	scriptmanager.cpp
	scriptmodule.cpp
	scriptprocess.cpp
	selectionrectangle.cpp
	selectsametiletool.cpp
	#sentryhelper.cpp  # XXX: conditional
	session.cpp
	shapefilltool.cpp
	shortcutsettingspage.cpp
	snaphelper.cpp
	stampactions.cpp
	stampbrush.cpp
	stylehelper.cpp
	swaptiles.cpp
	tabbar.cpp
	templatesdock.cpp
	texteditordialog.cpp
	textpropertyedit.cpp
	tileanimationeditor.cpp
	tilecollisiondock.cpp
	tiledapplication.cpp
	tiledproxystyle.cpp
	tilelayeredit.cpp
	tilelayeritem.cpp
	tilepainter.cpp
	tileselectionitem.cpp
	tileselectiontool.cpp
	tilesetchanges.cpp
	tilesetdock.cpp
	tilesetdocument.cpp
	tilesetdocumentsmodel.cpp
	tileseteditor.cpp
	tilesetmodel.cpp
	tilesetparametersedit.cpp
	tilesetview.cpp
	tilesetwangsetmodel.cpp
	tilestamp.cpp
	tilestampmanager.cpp
	tilestampmodel.cpp
	tilestampsdock.cpp
	tmxmapformat.cpp
	toolmanager.cpp
	transformmapobjects.cpp
	treeviewcombobox.cpp
	undocommands.cpp
	undodock.cpp
	utils.cpp
	varianteditorfactory.cpp
	variantpropertymanager.cpp
	wangbrush.cpp
	wangcolormodel.cpp
	wangcolorview.cpp
	wangdock.cpp
	wangfiller.cpp
	wangoverlay.cpp
	wangsetmodel.cpp
	wangsetview.cpp
	wangtemplatemodel.cpp
	wangtemplateview.cpp
	worlddocument.cpp
	worldmovemaptool.cpp
	zoomable.cpp
)

set(TILEDEDITOR_HEADERS
	aboutdialog.h
	abstractobjecttool.h
	abstracttilefilltool.h
	abstracttileselectiontool.h
	abstracttiletool.h
	abstracttool.h
	abstractworldtool.h
	actionmanager.h
	addpropertydialog.h
	addremovelayer.h
	addremovemapobject.h
	addremovetiles.h
	addremovetileset.h
	addremovewangset.h
	adjusttileindexes.h
	automapper.h
	automapperwrapper.h
	automappingmanager.h
	automappingutils.h
	brokenlinks.h
	brushitem.h
	bucketfilltool.h
	capturestamphelper.h
	changeevents.h
	changeimagelayerproperty.h
	changelayer.h
	changemapobject.h
	changemapobjectsorder.h
	changemapproperty.h
	changeobjectgroupproperties.h
	changepolygon.h
	changeproperties.h
	changeselectedarea.h
	changetile.h
	changetileanimation.h
	changetileimagesource.h
	changetileobjectgroup.h
	changetilewangid.h
	changevalue.h
	changewangcolordata.h
	changewangsetdata.h
	clickablelabel.h
	clipboardmanager.h
	colorbutton.h
	command.h
	commandbutton.h
	commanddatamodel.h
	commanddialog.h
	commandmanager.h
	commandsedit.h
	consoledock.h
	createellipseobjecttool.h
	createobjecttool.h
	createpointobjecttool.h
	createpolygonobjecttool.h
	createrectangleobjecttool.h
	createscalableobjecttool.h
	createtemplatetool.h
	createtextobjecttool.h
	createtileobjecttool.h
	custompropertieshelper.h
	debugdrawitem.h
	document.h
	documentmanager.h
	donationpopup.h
	editableasset.h
	editablegrouplayer.h
	editableimagelayer.h
	editablelayer.h
	editablemanager.h
	editablemap.h
	editablemapobject.h
	editableobject.h
	editableobjectgroup.h
	editableselectedarea.h
	editabletile.h
	editabletilelayer.h
	editabletileset.h
	editablewangset.h
	editor.h
	editpolygontool.h
	eraser.h
	erasetiles.h
	exportasimagedialog.h
	exporthelper.h
	filechangedwarning.h
	fileedit.h
	filteredit.h
	flexiblescrollbar.h
	flipmapobjects.h
	geometry.h
	grouplayeritem.h
	iconcheckdelegate.h
	id.h
	imagecolorpickerwidget.h
	imagelayeritem.h
	issuescounter.h
	issuesdock.h
	issuesmodel.h
	languagemanager.h
	layerdock.h
	layeritem.h
	layermodel.h
	layeroffsettool.h
	locatorwidget.h
	magicwandtool.h
	maintoolbar.h
	mainwindow.h
	mapdocument.h
	mapdocumentactionhandler.h
	mapeditor.h
	mapitem.h
	mapobjectitem.h
	mapobjectmodel.h
	mapscene.h
	mapview.h
	minimap.h
	minimapdock.h
	movelayer.h
	movemapobjecttogroup.h
	newmapdialog.h
	newsbutton.h
	newsfeed.h
	newtilesetdialog.h
	newversionbutton.h
	newversionchecker.h
	newversiondialog.h
	noeditorwidget.h
	objectgroupitem.h
	objectrefdialog.h
	objectrefedit.h
	objectreferenceitem.h
	objectreferenceshelper.h
	objectreferencetool.h
	objectsdock.h
	objectselectionitem.h
	objectselectiontool.h
	objectsview.h
	offsetlayer.h
	offsetmapdialog.h
	painttilelayer.h
	pch.h
	pluginlistmodel.h
	pointhandle.h
	popupwidget.h
	preferences.h
	preferencesdialog.h
	project.h
	projectdock.h
	projectmanager.h
	projectmodel.h
	projectpropertiesdialog.h
	propertiesdock.h
	propertybrowser.h
	propertytypeseditor.h
	propertytypesmodel.h
	raiselowerhelper.h
	randompicker.h
	rangeset.h
	regionvaluetype.h
	relocatetiles.h
	reparentlayers.h
	replacetemplate.h
	replacetileset.h
	resizedialog.h
	resizehelper.h
	resizemap.h
	resizetilelayer.h
	reversingproxymodel.h
	scriptdialog.h
	scriptedaction.h
	scriptedfileformat.h
	scriptedtool.h
	scriptfile.h
	scriptfileformatwrappers.h
	scriptfileinfo.h
	scriptimage.h
	scriptmanager.h
	scriptmodule.h
	scriptprocess.h
	selectionrectangle.h
	selectsametiletool.h
	#sentryhelper.h  # XXX: conditional
	session.h
	shapefilltool.h
	shortcutsettingspage.h
	snaphelper.h
	stampactions.h
	stampbrush.h
	stylehelper.h
	swaptiles.h
	tabbar.h
	templatesdock.h
	texteditordialog.h
	textpropertyedit.h
	tileanimationeditor.h
	tilecollisiondock.h
	tiledapplication.h
	tilededitor_global.h
	tiledproxystyle.h
	tilelayeredit.h
	tilelayeritem.h
	tilepainter.h
	tileselectionitem.h
	tileselectiontool.h
	tilesetchanges.h
	tilesetdock.h
	tilesetdocument.h
	tilesetdocumentsmodel.h
	tileseteditor.h
	tilesetmodel.h
	tilesetparametersedit.h
	tilesetview.h
	tilesetwangsetmodel.h
	tilestamp.h
	tilestampmanager.h
	tilestampmodel.h
	tilestampsdock.h
	tmxmapformat.h
	toolmanager.h
	transformmapobjects.h
	treeviewcombobox.h
	undocommands.h
	undodock.h
	utils.h
	varianteditorfactory.h
	variantpropertymanager.h
	wangbrush.h
	wangcolormodel.h
	wangcolorview.h
	wangdock.h
	wangfiller.h
	wangoverlay.h
	wangsetmodel.h
	wangsetview.h
	wangtemplatemodel.h
	wangtemplateview.h
	worlddocument.h
	worldmovemaptool.h
	zoomable.h
)

SET(TILEDEDITOR_UIS
	aboutdialog.ui
	addpropertydialog.ui
	commanddialog.ui
	commandsedit.ui
	exportasimagedialog.ui
	imagecolorpickerwidget.ui
	mainwindow.ui
	newmapdialog.ui
	newtilesetdialog.ui
	newversiondialog.ui
	noeditorwidget.ui
	objectrefdialog.ui
	offsetmapdialog.ui
	preferencesdialog.ui
	projectpropertiesdialog.ui
	propertytypeseditor.ui
	resizedialog.ui
	shortcutsettingspage.ui
	texteditordialog.ui
	tileanimationeditor.ui
)

add_library(tilededitor OBJECT ${TILEDEDITOR_SOURCES} ${TILEDEDITOR_HEADERS} ${TILEDEDITOR_UIS})
target_include_directories(tilededitor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(tilededitor PUBLIC
	qtpropertybrowser
	qtsingleapplication
	$<TARGET_OBJECTS:qtpropertybrowser>
	$<TARGET_OBJECTS:qtsingleapplication>
	libtiled
	Qt::Concurrent
	Qt::Qml
	Qt::QmlPrivate
	Qt::Widgets
)
target_compile_definitions(tilededitor PRIVATE
	TILED_EDITOR_LIBRARY
	TILED_VERSION=${CMAKE_PROJECT_VERSION}
	"QT_DISABLE_DEPRECATED_BEFORE=QT_VERSION_CHECK(5,15,0)"
	QT_NO_DEPRECATED_WARNINGS
	QT_NO_CAST_FROM_ASCII
	QT_NO_CAST_TO_ASCII
	QT_NO_FOREACH
	QT_NO_URL_CAST_FROM_STRING
	_USE_MATH_DEFINES
)
